--- a/golang-code-server/docker-compose.yml
+++ b/golang-code-server/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - DEFAULT_WORKSPACE=/config/workspace #optional
     volumes:
       - ./config:/config
+      - ./go:/go
     ports:
-      - 8443:8443
+      - 8443:8443 # code-server
+      - 8080:8080 # test
     restart: unless-stopped
